# amiro_robot

./: .gitignore  .gitmodules  README.md
amiro_control/: CMakeLists.txt  package.xml
amiro_control/config/: amiro_control.yaml
amiro_control/launch/: amiro_control.launch  amiro_rqt.launch  amiro_rqt.perspective
amiro_description/: CMakeLists.txt  package.xml
amiro_description/launch/: amiro.launch  amiro.rviz  amiro_rviz.launch  amiro_rviz.rviz
amiro_description/urdf/: amiro.gazebo  amiro.urdf  amiro.xacro  amiro_astra.xacro  amiro_basic.xacro  amiro_camera.xacro  amiro_camera_hokuyo.xacro  amiro_hokuyo.xacro
amiro_description/urdf/camera/: astra.xacro  camera.xacro  generic_rgbd.xacro
amiro_description/urdf/laser/: hokuyo.xacro  hokuyo_gpu.xacro
amiro_description/urdf/proximity/: floor.xacro  ring.xacro
amiro_gazebo/: CMakeLists.txt  package.xml
amiro_gazebo/launch/: amiro_assembly_line.launch  amiro_assembly_line_project.launch  amiro_gridworld_huge.launch  amiro_gridworld_just_mapping.launch  amiro_gridworld_project.launch  amiro_gridworld_sparse.launch  amiro_simple_world.launch  amiro_simple_world.rviz  amiro_watchmen_route_project.launch  amiro_world.launch  amiro_world.rviz  empty_gridworld_project.launch  gazebo.launch
amiro_gazebo/models/assembly_line/: model.config  model.sdf
amiro_gazebo/models/assembly_line/materials/: assembly_line.material  flip.sh
amiro_gazebo/models/assembly_line_project/: model.config  model.sdf
amiro_gazebo/models/assembly_line_project/materials/: assembly_line.material  pixellocations.txt
amiro_gazebo/models/gridworld_project/: README.md  model.config  model.sdf
amiro_gazebo/models/gridworld_project/gridworld/: model.sdf
amiro_gazebo/models/gridworld_project/materials/: gridworld.material
amiro_gazebo/models/gridworld_project/tet_b/: model.sdf
amiro_gazebo/models/gridworld_project/tet_c/: model.config  model.sdf
amiro_gazebo/models/gridworld_project/tet_g/: model.config  model.sdf
amiro_gazebo/models/gridworld_project/tet_o/: model.config
amiro_gazebo/models/gridworld_project/tet_r/: model.sdf
amiro_gazebo/models/gridworld_project/tet_v/: model.config  model.sdf
amiro_gazebo/models/gridworld_project/tet_y/: model.sdf
amiro_gazebo/models/gridworld_project_huge/: model.config  model.sdf
amiro_gazebo/models/gridworld_project_huge/materials/: gridworld_huge.material
amiro_gazebo/models/gridworld_project_just_mapping/: model.config  model.sdf
amiro_gazebo/models/gridworld_project_just_mapping/materials/: gridworld.material
amiro_gazebo/models/tet_b/: model.config
amiro_gazebo/models/tet_c/: model.sdf
amiro_gazebo/models/tet_g/: model.sdf
amiro_gazebo/models/tet_o/: model.sdf
amiro_gazebo/models/tet_r/: model.config  model.sdf
amiro_gazebo/models/tet_v/: model.sdf
amiro_gazebo/models/tet_y/: model.config  model.sdf
amiro_gazebo/models/watchmen_route_project/: model.config  model.sdf
amiro_gazebo/models/watchmen_route_project/materials/: watchmen_route.material  watchmen_route_0_locations.ods  watchmen_route_1_locations.ods  watchmen_route_2_locations.ods
amiro_gazebo/worlds/: amiro.world  assembly_line.world  assembly_line_project.world  desk.world  empty_slow.world  example_gridworld.world  gridworld_huge.world  gridworld_just_mapping.world  gridworld_project.world  gridworld_sparse.world  watchmen_route_project.world
amiro_gazebo/yaml/: rfid_assembly_line_project.yaml  rfid_example.yaml  watchmen_route_0.yaml  watchmen_route_1.yaml  watchmen_route_2.yaml
amiro_msg/: CMakeLists.txt  package.xml
amiro_msgs/msg/: UInt16MultiArrayStamped.msg
custom_plugin_tutorial/: CMakeLists.txt  package.xml
sensor_mockup/: CMakeLists.txt  package.xml
sensor_mockup/model_regression/: floor_model.sfit  floor_prox_sense_amiro38.csv  func_floor_model_fit.m  main_floor_model.m
sensor_mockup/src/: proximity_floor_mockup_node.cpp  proximity_mockup_node.cpp  proximity_ring_mockup_node.cpp  rfid_mockup_node.cpp
sensor_mockup/yaml/: rfid.yaml
